third_party/move/move-compiler-v2/tests/checking-lang-v2.5/immutable_const_private_rejected.exp

Diagnostics:
error: invalid attribute
  ┌─ tests/checking-lang-v2.5/immutable_const_private_rejected.move:4:7
  │
4 │     #[immutable]
  │       ^^^^^^^^^
  │       │
  │       Attribute 'immutable' is not expected with a constant
  │       Expected to be used with one of the following: function
