third_party/move/move-compiler-v2/tests/checking-lang-v2.5/immutable_const_private_rejected.move
// Tests that #[immutable] on a private constant is rejected.
module 0x42::M {
    // Error: private constant with #[immutable] has no accessor to pin.
    #[immutable]
    const PRIV: u64 = 42;

    public fun use_it(): u64 { PRIV }
}
